style: fixed icon alignment

--- a/src/components/titles/css/WebsiteTitle.module.css
+++ b/src/components/titles/css/WebsiteTitle.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     padding: 3%;
     display: flex;
+    align-items: center;
     gap: 10px;
 }
 .websiteIcon {
